--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <title>MovieSite</title>
 </head>
@@ -25,5 +24,41 @@
                 </ul>
             </div>
             <button onclick="signIn()">Sign In</button>
+        </div>
+    </div>
+    <div class="sidebar">
+        <i class="left-menu-icon fas fa-search"></i>
+        <i class="left-menu-icon fas fa-home"></i>
+        <i class="left-menu-icon fas fa-users"></i>
+        <i class="left-menu-icon fas fa-bookmark"></i>
+        <i class="left-menu-icon fas fa-tv"></i>
+        <i class="left-menu-icon fas fa-hourglass-start"></i>
+        <i class="left-menu-icon fas fa-shopping-cart"></i>
+    </div>
+    <div class="container">
+        <div class="content-container">
+            <div class="featured-content"
+            style="background: linear-gradient(to bottom, rgba(0,0,0,0),#151515), url('img/img1.jpg');"
+            >
+               <img class="featured-title" src="img/img2.2.png" alt="" >
+               <p class="featured-desc">Në momentin që vjen fundi i jetës në tokë, një ekip eksploruesish merr përsipër misionin më të rëndësishëm në historinë njerëzore: të udhëtojnë në galaktikë për të zbuluar nëse njerëzimi ka një të ardhme në mesin e yjeve.</p>
+               <button class="featured-button">WATCH</button>
+            </div>
+            <div class="movie-list-container">
+                <h1 class="movie-list-title">NEW RELEASE</h1>
+                <div class="movie-list-wrapper">
+                    <div class="movie-list">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/img3.1.webp" alt="">
+                            <span class="movie-list-item-title">Five Nights at Freddy's</span>
+                            <p class="movie-list-item-desc">Horror Mister Thriller</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
