--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         </div>
     </div>
     <div class="sidebar">
+
+       
+
         <i class="left-menu-icon fas fa-search"></i>
         <i class="left-menu-icon fas fa-home"></i>
         <i class="left-menu-icon fas fa-users"></i>
@@ -54,9 +57,29 @@
                             <p class="movie-list-item-desc">Horror Mister Thriller</p>
                             <button class="movie-list-item-button">Watch</button>
                         </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/img5.2.png" alt="">
+                            <span class="movie-list-item-title">Gladiator</span>
+                            <p class="movie-list-item-desc">Aksion Aventurë Dramë </p>
+                            <button class="movie-list-item-button">Watch</button>
                     </div>
+                    <div class="movie-list-item">
+                        <img class="movie-list-item-img" src="img/img5.1.png" alt="">
+                        <span class="movie-list-item-title">Openheimer</span>
+                        <p class="movie-list-item-desc">Biografi Dramë Histori</p>
+                        <button class="movie-list-item-button">Watch</button>
                 </div>
+                <div class="movie-list-item">
+                    <img class="movie-list-item-img" src="img/img5.3.png" alt="">
+                    <span class="movie-list-item-title">Chosen</span>
+                    <p class="movie-list-item-desc">Dramë Luftë</p>
+                    <button class="movie-list-item-button">Watch</button>
             </div>
+            <div class="movie-list-item">
+                <img class="movie-list-item-img" src="img/img5.4.jpg" alt="">
+                <span class="movie-list-item-title">Leave the world behind</span>
+                <p class="movie-list-item-desc">Dramë Mister Thriller</p>
+                <button class="movie-list-item-button">Watch</button>
         </div>
     </div>
 
