--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                 <button class="movie-list-item-button">Watch</button>
         </div>
     </div>
+    <script> function signIn() {
+        window.location.href = 'faqja_e_regjistrimit.html';
+      }
+    </script>
 
 </body>
 </html>
