--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
         </div>
     </div>
     <div class="sidebar">
-
-       
-
         <i class="left-menu-icon fas fa-search"></i>
         <i class="left-menu-icon fas fa-home"></i>
         <i class="left-menu-icon fas fa-users"></i>
@@ -62,25 +59,150 @@
                             <span class="movie-list-item-title">Gladiator</span>
                             <p class="movie-list-item-desc">Aksion Aventurë Dramë </p>
                             <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/img5.1.png" alt="">
+                            <span class="movie-list-item-title">Openheimer</span>
+                            <p class="movie-list-item-desc">Biografi Dramë Histori</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                           <img class="movie-list-item-img" src="img/img5.3.png" alt="">
+                           <span class="movie-list-item-title">Chosen</span>
+                           <p class="movie-list-item-desc">Dramë Luftë</p>
+                           <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/img5.4.jpg" alt="">
+                            <span class="movie-list-item-title">Leave the world behind</span>
+                            <p class="movie-list-item-desc">Dramë Mister Thriller</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
                     </div>
-                    <div class="movie-list-item">
-                        <img class="movie-list-item-img" src="img/img5.1.png" alt="">
-                        <span class="movie-list-item-title">Openheimer</span>
-                        <p class="movie-list-item-desc">Biografi Dramë Histori</p>
-                        <button class="movie-list-item-button">Watch</button>
+                    <i class="fas fa-chevron-right arrow"></i>
+                </div>  
+            </div> 
+            <div class="movie-list-container">
+                <h1 class="movie-list-title">...</h1>
+                <div class="movie-list-wrapper">
+                    <div class="movie-list">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/2.jpg" alt="">
+                            <span class="movie-list-item-title">Star Wars</span>
+                            <p class="movie-list-item-desc">Fantazi Aksion Shkence</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/5.jpg" alt="">
+                            <span class="movie-list-item-title">Avengers</span>
+                            <p class="movie-list-item-desc">Aksion Aventurë Fantzai </p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/6.jpg" alt="">
+                            <span class="movie-list-item-title">Rampage</span>
+                            <p class="movie-list-item-desc">Sci-Fi Aksion Aventure</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                           <img class="movie-list-item-img" src="img/9.jpg" alt="">
+                           <span class="movie-list-item-title">The Hobbit</span>
+                           <p class="movie-list-item-desc">Fazntazi Aventure Aksion</p>
+                           <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/19.jpg" alt="">
+                            <span class="movie-list-item-title">Spiderman</span>
+                            <p class="movie-list-item-desc">Aksion Aventure Fantazi</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+                    <i class="fas fa-chevron-right arrow"></i>
                 </div>
-                <div class="movie-list-item">
-                    <img class="movie-list-item-img" src="img/img5.3.png" alt="">
-                    <span class="movie-list-item-title">Chosen</span>
-                    <p class="movie-list-item-desc">Dramë Luftë</p>
-                    <button class="movie-list-item-button">Watch</button>
             </div>
-            <div class="movie-list-item">
-                <img class="movie-list-item-img" src="img/img5.4.jpg" alt="">
-                <span class="movie-list-item-title">Leave the world behind</span>
-                <p class="movie-list-item-desc">Dramë Mister Thriller</p>
-                <button class="movie-list-item-button">Watch</button>
-        </div>
+            <div class="movie-list-container">
+                <h1 class="movie-list-title">...</h1>
+                <div class="movie-list-wrapper">
+                    <div class="movie-list">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/8.jpg" alt="">
+                            <span class="movie-list-item-title">How to lose a guy in 10 days</span>
+                            <p class="movie-list-item-desc">Komedi Romance Drame</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/10.jpg" alt="">
+                            <span class="movie-list-item-title">Maleficent</span>
+                            <p class="movie-list-item-desc"> Aventurë Aksion Drame</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/11.jpg" alt="">
+                            <span class="movie-list-item-title">Harry Potter</span>
+                            <p class="movie-list-item-desc">Fazntazi Aventure Familjar</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                           <img class="movie-list-item-img" src="img/12.jpg" alt="">
+                           <span class="movie-list-item-title">John Wick</span>
+                           <p class="movie-list-item-desc">Drame Aksion Thriller</p>
+                           <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/13.jpg" alt="">
+                            <span class="movie-list-item-title">Shok</span>
+                            <p class="movie-list-item-desc">Lufte Drame</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+                    <i class="fas fa-chevron-right arrow"></i>
+                </div>
+            </div>
+            <div class="featured-content"
+            style="background: linear-gradient(to bottom, rgba(0,0,0,0),#151515), url('img/16.png');"
+            >
+               <img class="featured-title" src="img/16.png" alt="" >
+               <p class="featured-desc">Një djalë i shkollës së mesme, Cameron, nuk mund të takohet me Biankën derisa motra e saj më e madhe antisociale, Kat, të ketë një të dashur. Kështu, Cameron paguan një djalë misterioz, Patrick, për të magjepsur Kat.</p>
+               <button class="featured-button">WATCH</button>
+            </div>
+            <div class="movie-list-container">
+                <h1 class="movie-list-title">...</h1>
+                <div class="movie-list-wrapper">
+                    <div class="movie-list">
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/14.jpg" alt="">
+                            <span class="movie-list-item-title">Zgjoi</span>
+                            <p class="movie-list-item-desc">Drame Shqiptar</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/17.jpg" alt="">
+                            <span class="movie-list-item-title">Alice through the looking glass</span>
+                            <p class="movie-list-item-desc">Familjar Fantazi</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/18.jpg" alt="">
+                            <span class="movie-list-item-title">Pirates of the Caribbean</span>
+                            <p class="movie-list-item-desc">Fantazi Aventure</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                           <img class="movie-list-item-img" src="img/20.jpg" alt="">
+                           <span class="movie-list-item-title">Bridge to Terabithia</span>
+                           <p class="movie-list-item-desc">Fantazi Drame</p>
+                           <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/21.jpg" alt="">
+                            <span class="movie-list-item-title">Home Alone</span>
+                            <p class="movie-list-item-desc">Komedi Familjar</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                    </div>
+                    
+
+        </div>     
     </div>
 
 </body>
