--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             </div>
             <div class="menu-container">
                 <ul class="menu-list">
-                    <li class="menu-list-item fkryesore">Faqja Kryesore</li>
-                    <li class="menu-list-item">Filmat</li>
-                    <li class="menu-list-item">Serialet</li>
-                    <li class="menu-list-item">Me te shikuarat</li>
-                    <li class="menu-list-item">Me te rejat</li>
+                    <li class="menu-list-item fkryesore"><a href="faqjakryesore">Faqja Kryesore</a></li>
+                    <li class="menu-list-item"><a href="#filmat">Filmat</a></li>
+                    <li class="menu-list-item"><a href="#serialet">Serialet</a></li>
+                    <li class="menu-list-item"><a href="#meteshikuarat">Me te shikuarat</a></li>
+                    <li class="menu-list-item"><a href="#meterejat">Me te rejat</a></li>
 
                 </ul>
             </div>
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="sidebar">
-        <i class="left-menu-icon fas fa-search"></i>
+        <i class="left-menu-icon fa-solid fa-magnifying-glass"></i>"></i>
         <i class="left-menu-icon fas fa-home"></i>
         <i class="left-menu-icon fas fa-users"></i>
         <i class="left-menu-icon fas fa-bookmark"></i>
@@ -36,7 +36,7 @@
         <i class="left-menu-icon fas fa-shopping-cart"></i>
     </div>
     <div class="container">
-        <div class="content-container">
+        <div class="content-container" >
             <div class="featured-content"
             style="background: linear-gradient(to bottom, rgba(0,0,0,0),#151515), url('img/img1.jpg');"
             >
@@ -44,8 +44,8 @@
                <p class="featured-desc">Në momentin që vjen fundi i jetës në tokë, një ekip eksploruesish merr përsipër misionin më të rëndësishëm në historinë njerëzore: të udhëtojnë në galaktikë për të zbuluar nëse njerëzimi ka një të ardhme në mesin e yjeve.</p>
                <button class="featured-button">WATCH</button>
             </div>
-            <div class="movie-list-container">
-                <h1 class="movie-list-title">NEW RELEASE</h1>
+            <div class="movie-list-container" >
+                <h1 class="movie-list-title" id="meterejat">ME TE REJAT</h1>
                 <div class="movie-list-wrapper">
                     <div class="movie-list">
                         <div class="movie-list-item">
@@ -83,7 +83,7 @@
                 </div>  
             </div> 
             <div class="movie-list-container">
-                <h1 class="movie-list-title">...</h1>
+                <h1 class="movie-list-title" id="meteshikuarat">ME TE SHIKUARAT</h1>
                 <div class="movie-list-wrapper">
                     <div class="movie-list">
                         <div class="movie-list-item">
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="movie-list-container">
-                <h1 class="movie-list-title">...</h1>
+                <h1 class="movie-list-title" id="filmat">FILMAT</h1>
                 <div class="movie-list-wrapper">
                     <div class="movie-list">
                         <div class="movie-list-item">
@@ -166,23 +166,23 @@
                <button class="featured-button">WATCH</button>
             </div>
             <div class="movie-list-container">
-                <h1 class="movie-list-title">...</h1>
+                <h1 class="movie-list-title" id="serialet">SERIALET</h1>
                 <div class="movie-list-wrapper">
                     <div class="movie-list">
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/14.jpg" alt="">
+                            <img class="movie-list-item-img" src="img/17.jpg" alt="">
                             <span class="movie-list-item-title">Zgjoi</span>
                             <p class="movie-list-item-desc">Drame Shqiptar</p>
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/17.jpg" alt="">
+                            <img class="movie-list-item-img" src="img/18.jpg" alt="">
                             <span class="movie-list-item-title">Alice through the looking glass</span>
                             <p class="movie-list-item-desc">Familjar Fantazi</p>
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/18.jpg" alt="">
+                            <img class="movie-list-item-img" src="img/19.jpg" alt="">
                             <span class="movie-list-item-title">Pirates of the Caribbean</span>
                             <p class="movie-list-item-desc">Fantazi Aventure</p>
                             <button class="movie-list-item-button">Watch</button>
@@ -208,6 +208,7 @@
         window.location.href = 'faqja_e_regjistrimit.html';
       }
     </script>
+    <script src="app.js"></script>
 
 </body>
 </html>
