--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             >
                <img class="featured-title" src="img/img2.2.png" alt="" >
                <p class="featured-desc">Në momentin që vjen fundi i jetës në tokë, një ekip eksploruesish merr përsipër misionin më të rëndësishëm në historinë njerëzore: të udhëtojnë në galaktikë për të zbuluar nëse njerëzimi ka një të ardhme në mesin e yjeve.</p>
-               <button class="featured-button">WATCH</button>
+               <a href="https://www.youtube.com/watch?v=zSWdZVtXT7E" target="_blank"> <button class="featured-button">WATCH</button></a>
             </div>
             <div class="movie-list-container" >
                 <h1 class="movie-list-title" id="meterejat">ME TE REJAT</h1>
@@ -52,7 +52,7 @@
                             <img class="movie-list-item-img" src="img/img3.1.webp" alt="">
                             <span class="movie-list-item-title">Five Nights at Freddy's</span>
                             <p class="movie-list-item-desc">Horror Mister Thriller</p>
-                            <button class="movie-list-item-button">Watch</button>
+                            <a href="https://www.youtube.com/watch?v=0VH9WCFV6XQ" target="_blank"><button class="movie-list-item-button">Watch</button></a>
                         </div>
                         <div class="movie-list-item">
                             <img class="movie-list-item-img" src="img/img5.2.png" alt="">
@@ -90,7 +90,7 @@
                             <img class="movie-list-item-img" src="img/2.jpg" alt="">
                             <span class="movie-list-item-title">Star Wars</span>
                             <p class="movie-list-item-desc">Fantazi Aksion Shkence</p>
-                            <button class="movie-list-item-button">Watch</button>
+                            <a href="https://www.youtube.com/watch?v=8Qn_spdM5Zg" target="_blank"><button class="movie-list-item-button">Watch</button></a>
                         </div>
                         <div class="movie-list-item">
                             <img class="movie-list-item-img" src="img/5.jpg" alt="">
@@ -128,7 +128,7 @@
                             <img class="movie-list-item-img" src="img/8.jpg" alt="">
                             <span class="movie-list-item-title">How to lose a guy in 10 days</span>
                             <p class="movie-list-item-desc">Komedi Romance Drame</p>
-                            <button class="movie-list-item-button">Watch</button>
+                            <a href="https://www.youtube.com/watch?v=2ZMGk_Ml1fc" target="_blank"><button class="movie-list-item-button">Watch</button></a>
                         </div>
                         <div class="movie-list-item">
                             <img class="movie-list-item-img" src="img/10.jpg" alt="">
@@ -163,40 +163,40 @@
             >
                <img class="featured-title" src="img/16.png" alt="" >
                <p class="featured-desc">Një djalë i shkollës së mesme, Cameron, nuk mund të takohet me Biankën derisa motra e saj më e madhe antisociale, Kat, të ketë një të dashur. Kështu, Cameron paguan një djalë misterioz, Patrick, për të magjepsur Kat.</p>
-               <button class="featured-button">WATCH</button>
+               <a href="https://www.youtube.com/watch?v=uE7qjQlfoRs" target="_blank"><button class="featured-button">WATCH</button></a>
             </div>
             <div class="movie-list-container">
                 <h1 class="movie-list-title" id="serialet">SERIALET</h1>
                 <div class="movie-list-wrapper">
                     <div class="movie-list">
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/17.jpg" alt="">
-                            <span class="movie-list-item-title">Zgjoi</span>
-                            <p class="movie-list-item-desc">Drame Shqiptar</p>
+                            <img class="movie-list-item-img" src="img/32.webp" alt="">
+                            <span class="movie-list-item-title">La Casa De Papel</span>
+                            <p class="movie-list-item-desc">Sezoni 5</p>
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/18.jpg" alt="">
-                            <span class="movie-list-item-title">Alice through the looking glass</span>
-                            <p class="movie-list-item-desc">Familjar Fantazi</p>
+                            <img class="movie-list-item-img" src="img/33.jpg" alt="">
+                            <span class="movie-list-item-title">Who is Erin?</span>
+                            <p class="movie-list-item-desc">Sezoni 1</p>
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/19.jpg" alt="">
-                            <span class="movie-list-item-title">Pirates of the Caribbean</span>
-                            <p class="movie-list-item-desc">Fantazi Aventure</p>
+                            <img class="movie-list-item-img" src="img/36.jpg" alt="">
+                            <span class="movie-list-item-title">Wednesday</span>
+                            <p class="movie-list-item-desc">Sezoni 1</p>
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                           <img class="movie-list-item-img" src="img/20.jpg" alt="">
-                           <span class="movie-list-item-title">Bridge to Terabithia</span>
-                           <p class="movie-list-item-desc">Fantazi Drame</p>
+                           <img class="movie-list-item-img" src="img/upload.jpg" alt="">
+                           <span class="movie-list-item-title">Upload</span>
+                           <p class="movie-list-item-desc">Sezoni 2</p>
                            <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/21.jpg" alt="">
-                            <span class="movie-list-item-title">Home Alone</span>
-                            <p class="movie-list-item-desc">Komedi Familjar</p>
+                            <img class="movie-list-item-img" src="img/34.jpg" alt="">
+                            <span class="movie-list-item-title">The Flash</span>
+                            <p class="movie-list-item-desc">Sezoni 9</p>
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                     </div>
