--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
                 <ul class="menu-list">
                     <li class="menu-list-item fkryesore">Faqja Kryesore</li>
                     <li class="menu-list-item">Filmat</li>
-                    <li class="menu-list-item">Serialet</li>
+                    <li id="li"><a href="serialet.html"><button class="button">Serialet</button></a></li>
                     <li class="menu-list-item">Me te shikuarat</li>
                     <li class="menu-list-item">Me te rejat</li>
 
                 </ul>
             </div>
+            
             <button onclick="signIn()">Sign In</button>
         </div>
     </div>
