--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="menu-list">
                     <li class="menu-list-item fkryesore">Faqja Kryesore</li>
                     <li class="menu-list-item">Filmat</li>
-                    <li class="menu-list-item">Serialet</li>
+                    <li id="li"><a href="serialet.html"><button class="button">Serialet</button></a></li>
                     <li class="menu-list-item">Me te shikuarat</li>
                     <li class="menu-list-item">Me te rejat</li>
 
@@ -28,7 +28,10 @@
         </div>
     </div>
     <div class="sidebar">
-        <i class="left-menu-icon fa-solid fa-magnifying-glass"></i>"></i>
+
+       
+
+        <i class="left-menu-icon fas fa-search"></i>
         <i class="left-menu-icon fas fa-home"></i>
         <i class="left-menu-icon fas fa-users"></i>
         <i class="left-menu-icon fas fa-bookmark"></i>
@@ -37,179 +40,53 @@
         <i class="left-menu-icon fas fa-shopping-cart"></i>
     </div>
     <div class="container">
-        <div class="content-container" >
+        <div class="content-container">
             <div class="featured-content"
             style="background: linear-gradient(to bottom, rgba(0,0,0,0),#151515), url('img/img1.jpg');"
             >
                <img class="featured-title" src="img/img2.2.png" alt="" >
                <p class="featured-desc">Në momentin që vjen fundi i jetës në tokë, një ekip eksploruesish merr përsipër misionin më të rëndësishëm në historinë njerëzore: të udhëtojnë në galaktikë për të zbuluar nëse njerëzimi ka një të ardhme në mesin e yjeve.</p>
-               <a href="https://www.youtube.com/watch?v=zSWdZVtXT7E" target="_blank"> <button class="featured-button">WATCH</button></a>
+               <button class="featured-button">WATCH</button>
             </div>
-            <div class="movie-list-container" >
-                <h1 class="movie-list-title" id="meterejat">ME TE REJAT</h1>
+            <div class="movie-list-container">
+                <h1 class="movie-list-title">NEW RELEASE</h1>
                 <div class="movie-list-wrapper">
                     <div class="movie-list">
                         <div class="movie-list-item">
                             <img class="movie-list-item-img" src="img/img3.1.webp" alt="">
                             <span class="movie-list-item-title">Five Nights at Freddy's</span>
                             <p class="movie-list-item-desc">Horror Mister Thriller</p>
-                            <a href="https://www.youtube.com/watch?v=0VH9WCFV6XQ" target="_blank"><button class="movie-list-item-button">Watch</button></a>
+                            <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
                             <img class="movie-list-item-img" src="img/img5.2.png" alt="">
                             <span class="movie-list-item-title">Gladiator</span>
                             <p class="movie-list-item-desc">Aksion Aventurë Dramë </p>
                             <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/img5.1.png" alt="">
-                            <span class="movie-list-item-title">Openheimer</span>
-                            <p class="movie-list-item-desc">Biografi Dramë Histori</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                           <img class="movie-list-item-img" src="img/img5.3.png" alt="">
-                           <span class="movie-list-item-title">Chosen</span>
-                           <p class="movie-list-item-desc">Dramë Luftë</p>
-                           <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/img5.4.jpg" alt="">
-                            <span class="movie-list-item-title">Leave the world behind</span>
-                            <p class="movie-list-item-desc">Dramë Mister Thriller</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
                     </div>
-                    <i class="fas fa-chevron-right arrow"></i>
-                </div>  
-            </div> 
-            <div class="movie-list-container">
-                <h1 class="movie-list-title" id="meteshikuarat">ME TE SHIKUARAT</h1>
-                <div class="movie-list-wrapper">
-                    <div class="movie-list">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/2.jpg" alt="">
-                            <span class="movie-list-item-title">Star Wars</span>
-                            <p class="movie-list-item-desc">Fantazi Aksion Shkence</p>
-                            <a href="https://www.youtube.com/watch?v=8Qn_spdM5Zg" target="_blank"><button class="movie-list-item-button">Watch</button></a>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/5.jpg" alt="">
-                            <span class="movie-list-item-title">Avengers</span>
-                            <p class="movie-list-item-desc">Aksion Aventurë Fantzai </p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/6.jpg" alt="">
-                            <span class="movie-list-item-title">Rampage</span>
-                            <p class="movie-list-item-desc">Sci-Fi Aksion Aventure</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                           <img class="movie-list-item-img" src="img/9.jpg" alt="">
-                           <span class="movie-list-item-title">The Hobbit</span>
-                           <p class="movie-list-item-desc">Fazntazi Aventure Aksion</p>
-                           <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/19.jpg" alt="">
-                            <span class="movie-list-item-title">Spiderman</span>
-                            <p class="movie-list-item-desc">Aksion Aventure Fantazi</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-                    <i class="fas fa-chevron-right arrow"></i>
+                    <div class="movie-list-item">
+                        <img class="movie-list-item-img" src="img/img5.1.png" alt="">
+                        <span class="movie-list-item-title">Openheimer</span>
+                        <p class="movie-list-item-desc">Biografi Dramë Histori</p>
+                        <button class="movie-list-item-button">Watch</button>
                 </div>
+                <div class="movie-list-item">
+                    <img class="movie-list-item-img" src="img/img5.3.png" alt="">
+                    <span class="movie-list-item-title">Chosen</span>
+                    <p class="movie-list-item-desc">Dramë Luftë</p>
+                    <button class="movie-list-item-button">Watch</button>
             </div>
-            <div class="movie-list-container">
-                <h1 class="movie-list-title" id="filmat">FILMAT</h1>
-                <div class="movie-list-wrapper">
-                    <div class="movie-list">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/8.jpg" alt="">
-                            <span class="movie-list-item-title">How to lose a guy in 10 days</span>
-                            <p class="movie-list-item-desc">Komedi Romance Drame</p>
-                            <a href="https://www.youtube.com/watch?v=2ZMGk_Ml1fc" target="_blank"><button class="movie-list-item-button">Watch</button></a>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/10.jpg" alt="">
-                            <span class="movie-list-item-title">Maleficent</span>
-                            <p class="movie-list-item-desc"> Aventurë Aksion Drame</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/11.jpg" alt="">
-                            <span class="movie-list-item-title">Harry Potter</span>
-                            <p class="movie-list-item-desc">Fazntazi Aventure Familjar</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                           <img class="movie-list-item-img" src="img/12.jpg" alt="">
-                           <span class="movie-list-item-title">John Wick</span>
-                           <p class="movie-list-item-desc">Drame Aksion Thriller</p>
-                           <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/13.jpg" alt="">
-                            <span class="movie-list-item-title">Shok</span>
-                            <p class="movie-list-item-desc">Lufte Drame</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-                    <i class="fas fa-chevron-right arrow"></i>
-                </div>
-            </div>
-            <div class="featured-content"
-            style="background: linear-gradient(to bottom, rgba(0,0,0,0),#151515), url('img/16.png');"
-            >
-               <img class="featured-title" src="img/16.png" alt="" >
-               <p class="featured-desc">Një djalë i shkollës së mesme, Cameron, nuk mund të takohet me Biankën derisa motra e saj më e madhe antisociale, Kat, të ketë një të dashur. Kështu, Cameron paguan një djalë misterioz, Patrick, për të magjepsur Kat.</p>
-               <a href="https://www.youtube.com/watch?v=uE7qjQlfoRs" target="_blank"><button class="featured-button">WATCH</button></a>
-            </div>
-            <div class="movie-list-container">
-                <h1 class="movie-list-title" id="serialet">SERIALET</h1>
-                <div class="movie-list-wrapper">
-                    <div class="movie-list">
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/32.webp" alt="">
-                            <span class="movie-list-item-title">La Casa De Papel</span>
-                            <p class="movie-list-item-desc">Sezoni 5</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/33.jpg" alt="">
-                            <span class="movie-list-item-title">Who is Erin?</span>
-                            <p class="movie-list-item-desc">Sezoni 1</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/36.jpg" alt="">
-                            <span class="movie-list-item-title">Wednesday</span>
-                            <p class="movie-list-item-desc">Sezoni 1</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                           <img class="movie-list-item-img" src="img/upload.jpg" alt="">
-                           <span class="movie-list-item-title">Upload</span>
-                           <p class="movie-list-item-desc">Sezoni 2</p>
-                           <button class="movie-list-item-button">Watch</button>
-                        </div>
-                        <div class="movie-list-item">
-                            <img class="movie-list-item-img" src="img/34.jpg" alt="">
-                            <span class="movie-list-item-title">The Flash</span>
-                            <p class="movie-list-item-desc">Sezoni 9</p>
-                            <button class="movie-list-item-button">Watch</button>
-                        </div>
-                    </div>
-                    
-
-        </div>     
+            <div class="movie-list-item">
+                <img class="movie-list-item-img" src="img/img5.4.jpg" alt="">
+                <span class="movie-list-item-title">Leave the world behind</span>
+                <p class="movie-list-item-desc">Dramë Mister Thriller</p>
+                <button class="movie-list-item-button">Watch</button>
+        </div>
     </div>
     <script> function signIn() {
         window.location.href = 'faqja_e_regjistrimit.html';
       }
     </script>
-    <script src="app.js"></script>
 
 </body>
 </html>
