--- a/serialet.html
+++ b/serialet.html
@@ -151,10 +151,8 @@
             <div class="menu-container">
                 <ul class="menu-list">
                     <li id="li"><a href="index.html"><button class="button">Faqja Kryesore</button></a></li>
-                    <li class="menu-list-item">Filmat</li>
+                    <li class="menu-list-item"><a href="filmat.html"><button class="button">Filmat</button></a></li>
                     <li id="li"><a href="serialet.html"><button class="button">Serialet</button></a></li>
-                    <li class="menu-list-item">Me te shikuarat</li>
-                    <li class="menu-list-item">Me te rejat</li>
                 </ul>
             </div>
             <li id="li"><a href="faqja_e_regjistrimit.html"><button class="button">Sign in</button></a></li>
