--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
                             <button class="movie-list-item-button">Watch</button>
                         </div>
                         <div class="movie-list-item">
+                            <img class="movie-list-item-img" src="img/10.jpg" alt="">
+                            <span class="movie-list-item-title">Maleficent</span>
+                            <p class="movie-list-item-desc"> Aventurë Aksion Drame</p>
+                            <button class="movie-list-item-button">Watch</button>
+                        </div>
+                        <div class="movie-list-item">
                             <img class="movie-list-item-img" src="img/11.jpg" alt="">
                             <span class="movie-list-item-title">Harry Potter</span>
                             <p class="movie-list-item-desc">Fazntazi Aventure Familjar</p>
