made some changes

--- a/faqja_e_regjistrimit.html
+++ b/faqja_e_regjistrimit.html
@@ -11,8 +11,8 @@
 
         body {
             font-family: 'Nunito Sans', sans-serif;
-            background-color: rgb(201, 166, 234);
             margin: 0;
+            background-image: url('https://images.unsplash.com/photo-1536440136628-849c177e76a1?q=80&w=1925&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
         }
 
         a {
@@ -38,9 +38,9 @@
         }
 
         .btn-outline-custom:hover {
-            color: #31374a;
+            color: #fff;
             border-color: #ddd;
-            background-color: rgb(201, 166, 234);
+            background-color: #000;
         }
 
         .bg-holder {
@@ -61,7 +61,6 @@
             transform: translate(-50%, -50%);
             padding-left: 0.5rem;
             padding-right: 0.5rem;
-            background-color: rgb(201, 166, 234);
             font-size: 0.8rem;
             font-weight: 500;
             color: #999;
@@ -102,7 +101,7 @@
             <!-- /Ana e majte -->
 
             <!-- Ana e djathte -->
-            <div class="col-lg-6">
+            <div class="col-lg-6" style="background-color: #000; opacity: 0.9;">
                 <div class="row align-items-center justify-content-center h-100 g-0 px-4 px-sm-0">
                     <div class="col-12 col-sm-6 col-lg-7 col-xl-6">
                         <div class="text-center mb-5">
