--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </ul>
             </div>
 
-            <button onclick="signIn()">Sign In</button>
+            <button onclick="logIn()">Qasja</button>
         </div>
     </div>
     <div class="container">
@@ -208,8 +208,8 @@
         </div>     
             
     </div>
-    <script> function signIn() {
-        window.location.href = 'faqja_e_regjistrimit.html';
+    <script> function logIn() {
+        window.location.href = 'Qasja.html';
       }
     </script>
     <script src="app.js"></script>
