--- a/filmat.html
+++ b/filmat.html
@@ -28,7 +28,7 @@
     </div>
     <div>
         <div style="width: 100%; height: 120px; display: flex; justify-content: center; align-items: center; ">
-            <div class="menu-container" style="display: flex; justify-content: center; align-items: center; background-color: #E9BD43; color: black; padding: 20px; width: 100%;">
+            <div class="menu-container" style="display: flex; justify-content: center; align-items: center; background-color: rgb(162, 101, 220); color: black; padding: 20px; width: 100%;">
                 <ul class="menu-list">
                     <li class="menu-list-item "><a href="#animuar"  style="color: black;">Animuar</a></li>
                     <li class="menu-list-item "><a  style="color: black;" href="#fantazi">Fantazi</a></li>
