--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="menu-container">
                 <ul class="menu-list">
-                    <li class="menu-list-item fkryesore">Faqja Kryesore</li>
+                    <li class="menu-list-item fkryesore">Ballina</li>
                     <li class="menu-list-item"><a href="filmat.html">Filmat</a></li>
                     <li class="menu-list-item"><a href="serialet.html">Serialet</a></li>
                     <li class="menu-list-item"><a href="#meteshikuarat">Me te shikuarat</a></li>
