--- a/index.html
+++ b/index.html
@@ -203,11 +203,51 @@
                     <i class="fas fa-chevron-right arrow"></i>
                 </div>
             </div>
-
-
-        </div>     
-            
+        </div>         
     </div>
+    <footer class="footer">
+        <hr class="footer-hr">
+        <div class="footer-content">
+          <div class="footer-middle">
+            <h2 class="footer-heading">Rrjetet Sociale</h2>
+            <ul class="footer-middle-list icons">
+              <a class="footer-links" href="https://www.facebook.com/" target="_blank"><i
+                  class="fab fa-facebook-f facebook" style="color:blueviolet"></i></a>
+              <a class="footer-links" href="https://twitter.com/login?lang=en" target="_blank"><i
+                  class="fab fa-twitter twitter" style="color:blueviolet"></i></a>
+              <a class="footer-links" href="https://www.linkedin.com/login" target="_blank"><i
+                  class="fab fa-linkedin linkedin" style="color:blueviolet"></i></a>
+              <a class="footer-links" href="https://www.instagram.com/" target="_blank"><i
+                  class="fab fa-instagram instagram" style="color:blueviolet"></i></a>
+              <a class="footer-links" href="https://github.com/" target="_blank"><i
+                  class="fab fa-github github" style="color:blueviolet"></i></a>
+            </ul>
+          </div>
+          <div class="footer-middle">
+            <h2 class="footer-heading">Sherbimet</h2>
+            <ul class="footer-middle-list">
+              <li class="footer-middle-list-item"><a href="filmat.html">Filmat</a> </li>
+              <li class="footer-middle-list-item"><a href="serialet.html">Serialet</a> </li>
+              <li class="footer-middle-list-item"><a href="Qasja.html">Qasja</a> </li>
+        
+            </ul>
+          </div>
+          <div class="footer-right">
+            <p class="footer-links">
+            <h2 class="footer-heading">Kontakti</h2>
+            <p class="footer-bottom-tagline">Mund te na kontaktoni</p>
+            <a class="footer-contact-button" href="#">Kontakti</a>
+            </p>
+          </div>
+        </div>
+        <hr class="footer-hr">
+        <div class="footer-copyright">
+          <p>Copyright &copy; and &reg; Since
+            <script>
+              document.write(new Date().getFullYear())
+            </script> 
+        </div>
+      </footer>
     <script> function logIn() {
         window.location.href = 'Qasja.html';
       }
