--- a/filmat.html
+++ b/filmat.html
@@ -30,22 +30,21 @@
         <div style="width: 100%; height: 120px; display: flex; justify-content: center; align-items: center; ">
             <div class="menu-container" style="display: flex; justify-content: center; align-items: center; background-color: rgb(162, 101, 220); color: black; padding: 20px; width: 100%;">
                 <ul class="menu-list">
-                    <li class="menu-list-item "><a href="#animuar"  style="color: black;">Animuar</a></li>
-                    <li class="menu-list-item "><a  style="color: black;" href="#fantazi">Fantazi</a></li>
-                    <li class="menu-list-item "><a  style="color: black;" href="#aventure">Aventure</a></li>
-                    <li class="menu-list-item "><a  style="color: black;" href="#aksion">Aksion</a></li>
-                    <li class="menu-list-item "><a  style="color: black;" href="#mister">Mister</a></li>
-                    <li class="menu-list-item "><a  style="color: black;" href="#komedi">Komedi</a></li>
-                    <li class="menu-list-item "><a  style="color: black;" href="#sport">Sport</a></li>
+                    <li class="menu-list-item "><a href="#animuar"  style="color: black;  font-weight: bold; font-size: 20px;">Animuar</a></li>
+                    <li class="menu-list-item "><a  style="color: black;  font-weight: bold; font-size: 20px;" href="#fantazi">Fantazi</a></li>
+                    <li class="menu-list-item "><a  style="color: black;  font-weight: bold; font-size: 20px;" href="#aventure">Aventure</a></li>
+                    <li class="menu-list-item "><a  style="color: black;  font-weight: bold; font-size: 20px;" href="#aksion">Aksion</a></li>
+                    <li class="menu-list-item "><a  style="color: black;  font-weight: bold; font-size: 20px;" href="#mister">Mister</a></li>
+                    <li class="menu-list-item "><a  style="color: black;  font-weight: bold; font-size: 20px;" href="#komedi">Komedi</a></li>
+                    <li class="menu-list-item "><a  style="color: black;  font-weight: bold; font-size: 20px;" href="#sport">Sport</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container" style="margin: 0 auto;">
         <div class="content-container" >
-        <div class="content-container">
             <div class="movie-list-container">
-                <div class="movie-list-wrapper" >
+                <div class="movie-list-wrapper" style="display: flex; justify-content: center; align-items: center;" >
                     <div class="movie-list" style="width: 100%; display: flex; justify-content: center; align-items: center; ">
                 <h1 class="movie-list-title horizontal-scroll-wrapper squares" id="animuar" style="transform: rotate(-90deg); align-self:center;">Animuar</h1>
                 <div class="card">
