--- a/Qasja.html
+++ b/Qasja.html
@@ -29,7 +29,7 @@
         </form>
 
         <div class="text-center">
-            <small>Nuk keni nje llogari? <a href="#" class="btn-link fw-bold" style="color: rgb(162, 101, 220); text-decoration: none;">Regjistrohu</a></small>
+            <small>Nuk keni nje llogari? <a href="Regjistrimi.html" class="btn-link fw-bold" style="color: rgb(162, 101, 220); text-decoration: none;">Regjistrohu</a></small>
         </div>
     </div>
 </body>
