--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="img">
                 <div class="movie">
                     <h2>Unlimited movies, series, and more.</h2>
-                    <p class="description">Watch anywhere. Cancel anytime.</p>
-                    <button1 class="show-details">Show Details</button1>
-                    <div class="details">
+                    <p class="description1">Watch anywhere. Cancel anytime.</p>
+                    <button1 class="show-details1">Show Details</button1>
+                    <div class="details1">
                         <p>Created by : Group 3</p>
                         <p>Release Year: 2023</p>
                     </div>
